Document PMD fixes inline (#3976)